# ChangeLog for vmware overlay
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  06 Jan 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-modules/files/1.0.0.17-kernel-2.6.13-rtnl.patch,
  +app-emulation/vmware-modules/files/1.0.0.17-update115-nasty-hack.patch,
  +app-emulation/vmware-modules/files/patches/vmnet/021_all_wireless_fix.pat
  ch:
  Add in 3 module patches, and put in a temporary hack to build 1.0.0.17 from
  vmware-any-any.

  28 Dec 2007; Mike Auty <ikelos@gentoo.org>
  +app-emulation/open-vm-tools/files/open-vm-tools-hardened.patch:
  Add in hardened patch as an actual fix for bug 200376.

  26 Dec 2007; Mike Auty <ikelos@gentoo.org>
  -app-emulation/open-vm-tools/open-vm-tools-0.0.20070904.56574.ebuild,
  -app-emulation/open-vm-tools/open-vm-tools-0.0.20071008.99999.ebuild,
  -app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693.ebuild,
  +app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693-r1.ebuild:
  Bump open-vm-tools with eautoreconf to try to fix bug 200376.

  02 Dec 2007; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-server/files/authorization.xml:
  Bump to vmware-any-any-update115.
  Remove need for any-any in server-1,2, workstation-6, player-2.
  Add in initial (but not really usable) vmware server-2 beta.

  26 Nov 2007; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693.ebuild:
  Ensure default scripts are installed and executable.

  25 Nov 2007; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-player/files/vmware-player.rc,
  app-emulation/vmware-server/files/vmware-server.rc,
  app-emulation/vmware-workstation/files/vmware-workstation.rc:
  Synchronize with the main portage tree.

  24 Nov 2007; Mike Auty <ikelos@gentoo.org>
  +app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693.ebuild,
  app-emulation/vmware-modules/vmware-modules-1.0.0.17.ebuild: