@@ -5,4 +5,4 @@ AUX open-vm.initd 1758 RMD160 49d9bf6d72cce10fc2582e595c4015a827f9f612 SHA1 7497
 AUX tools.conf 21 RMD160 88b5b8c8e088333e9c00b2e1c3f3572553342e7b SHA1 42a670b887751dbe9317624dd11068390d1780b0 SHA256 05dcb62e54991ca5546066e4d04b50be98fb0cc229168d4d73df8cf8a94c068c
 AUX xautostart.conf 59 RMD160 ca1ea3f1b82caa6e97d94835d88a39a6f153ff7a SHA1 92ba86e426fdaa3de1a8aad56db2d2ac358949a1 SHA256 13398e0ffcd7005bc8c92f3cd62865d2601e52fc980a4702fa252bef5c1efcc7
 DIST open-vm-tools-2007.11.21-64693.tar.gz 2295022 RMD160 e166040e713f4b7f8fae835862128a7ec3fdca75 SHA1 5b5e8edd726a997e3db0585af010a4be3405cc67 SHA256 b00530bf578b07127880ad3107b2b98873d3e5f74876dd94644bac3883be4431
-EBUILD open-vm-tools-0.0.20071121.64693-r1.ebuild 4018 RMD160 87ea4a9b675967318020e18a31a934c68c5673dc SHA1 a7e10386086e868bff8e50284d858226e5ba1b1a SHA256 cfc7c6e4da988acb550761898f7f87db8b0931a448bbb39aec469f06a91f0460
+EBUILD open-vm-tools-0.0.20071121.64693-r1.ebuild 3994 RMD160 34fb4665a7abceb563a72d849a9773455742f0e1 SHA1 243991cf796ba96c2ee2bb1f09c4bf827dce03ba SHA256 1792a05ee5e1a43be6a74be015c5606ca34aedfc7de038750dd10233234cd802
