@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  09 Jan 2008; Mike Auty <ikelos@gentoo.org>
+  app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693-r1.ebuild:
+  Fix up $ROOT usage in open-vm-tools.
+
   06 Jan 2008; Mike Auty <ikelos@gentoo.org>
   +app-emulation/vmware-modules/files/1.0.0.17-kernel-2.6.13-rtnl.patch,
   +app-emulation/vmware-modules/files/1.0.0.17-update115-nasty-hack.patch,
